--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,13 @@ body {
 }
 
 .subtitle-text {
-    font-size: 18px;
-    font-weight: 900;
+    font-size: 12px;
+    font-weight: 500;
+    font-style: italic;
+    max-width: 300px;
+    text-align: center;
+    margin-top: -41px;
+    margin-bottom: 16px;
 }
 
 .copyright {
@@ -486,6 +491,96 @@ body {
 /* About Page Center Page Box Specific Responsive Styles */
 
 /* End About Page Center Page Box Specific Responsive Styles */
+
+/* Client Page Center Page Box Specific Styles */
+#clients .client-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 495px;
+    justify-content: space-between;
+}
+
+#clients .client-gallery img {
+    margin-bottom: 7.5px;
+    width: 150px;
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+
+#clients .client-gallery img:hover {
+    transform: scale(1.05);
+}
+
+/* End Client Page Center Page Box Specific Styles */
+
+/* Client Page Center Page Box Specific Responsive Styles */
+@media(max-width: 649px) {
+    #clients .client-gallery {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 495px;
+        justify-content: space-around;
+    }
+}
+
+/* End Client Page Center Page Box Specific Responsive Styles */
+
+/* Contact Page Center Page Box Specific Styles */
+#contact form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+#contact form input,
+#contact form textarea {
+    max-width: 500px;
+    width: 100%;
+    border: none;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 6px 15px;
+    font-size: 12px;
+}
+
+#contact form input:focus,
+#contact form textarea:focus {
+    outline: rgba(79, 91, 213, 0.5) auto 1px;
+}
+
+#contact form button {
+    padding: 4px 20px;
+    color: white;
+    border-radius: 5px;
+    margin-right: 15px;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 15px;
+    background-color: var(--site-accent-color);
+    border: none;
+    transition: all 0.2s linear;
+}
+
+#contact form button:hover {
+    opacity: 0.8;
+}
+
+::placeholder {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    color: rgba(74, 74, 74, 0.5);
+}
+
+/* End Contact Page Center Page Box Specific Styles */
+
+/* Contact Page Center Page Box Specific Responsive Styles */
+
+/* End Contact Page Center Page Box Specific Responsive Styles */
 
 /* Services Page Center Page Box Specific Styles */
 #services .service-grid {
