--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,13 @@ body {
     height: 100vh;
     position: relative;
     overflow-x: hidden;
+    color: #4A4A4A;
 }
 
 .title-text {
     font-size: 24px;
     font-weight: 900;
+    color: initial;
 }
 
 .subtitle-text {
@@ -258,7 +260,7 @@ body {
 .center-page-box {
     width: calc(100% - (2 * var(--uniform-padding) * 1px));
     max-width: calc(var(--center-box-max-width) * 1px);
-    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 50px rgba(69, 81, 203, 0.1);
     border-radius: 5px;
     margin: auto;
     margin-top: 75px;
@@ -544,6 +546,7 @@ body {
     margin-bottom: 10px;
     padding: 6px 15px;
     font-size: 12px;
+    color: #4A4A4A;
 }
 
 #contact form input:focus,
@@ -799,6 +802,7 @@ body {
 
 #press .large-box .title {
     font-size: 14px;
+    color: initial;
 }
 
 #press .large-box a {
@@ -807,10 +811,13 @@ body {
 
 #press .large-box .subtitle {
     font-size: 12px;
+    color: initial;
 }
 
 #press .large-box .extra-info {
     font-size: 14px;
+    color: #AAAABA;
+    font-weight: 500;
 }
 
 /* End Experience/Press Page Center Page Box Specific Styles */
